@@ -25,11 +25,11 @@ import hudson.security.ACLContext;
 import hudson.security.AccessDeniedException3;
 import hudson.util.RunList;
 import java.io.IOException;
+import java.util.Arrays;
 import java.util.List;
 import net.sf.json.JSONArray;
 import org.assertj.core.api.Assertions;
-import org.jenkinsci.plugins.DependencyTrack.model.Severity;
-import org.jenkinsci.plugins.DependencyTrack.model.SeverityDistribution;
+import org.jenkinsci.plugins.DependencyTrack.model.*;
 import org.junit.jupiter.api.Test;
 import org.jvnet.hudson.test.JenkinsRule;
 import org.jvnet.hudson.test.MockAuthorizationStrategy;
@@ -52,7 +52,14 @@ class JobActionTest {
     void isTrendVisible() {
         Job job = mock(Job.class);
         Run run = mock(Run.class);
-        when(run.getAction(ResultAction.class)).thenReturn(new ResultAction(List.of(), new SeverityDistribution(1)));
+        when(run.getAction(ResultAction.class))
+                .thenReturn(
+                        new ResultAction(
+                                List.of(),
+                                new SeverityDistribution(1),
+                                List.of(),
+                                new ViolationDistribution(1)));
+
         when(job.getBuilds())
                 .thenReturn(RunList.fromRuns(List.of()))
                 .thenReturn(RunList.fromRuns(List.of(run)));
@@ -62,11 +69,11 @@ class JobActionTest {
     }
 
     @Test
-    void getSeverityDistributionTrendPermissionTest(JenkinsRule j) throws IOException {
+    void getTrendDistributionTrendPermissionTest(JenkinsRule j) throws IOException {
         final MockAuthorizationStrategy mockAuthorizationStrategy = new MockAuthorizationStrategy();
         j.jenkins.setAuthorizationStrategy(mockAuthorizationStrategy);
         j.jenkins.setSecurityRealm(j.createDummySecurityRealm());
-        
+
         FreeStyleProject project;
         try (ACLContext ignored = ACL.as(User.getOrCreateByIdOrFullName(ACL.SYSTEM_USERNAME))) {
             mockAuthorizationStrategy.grant(Job.CREATE).onRoot().to(ACL.SYSTEM_USERNAME);
@@ -76,12 +83,12 @@ class JobActionTest {
         final User anonymous = User.getOrCreateByIdOrFullName(ACL.ANONYMOUS_USERNAME);
         // without propper permissions
         try (ACLContext ignored = ACL.as(anonymous)) {
-            assertThatThrownBy(() -> uut.getSeverityDistributionTrend()).isInstanceOf(AccessDeniedException3.class);
+            assertThatThrownBy(() -> uut.getTrendDistribution()).isInstanceOf(AccessDeniedException3.class);
         }
         // with propper permissions
         try (ACLContext ignored = ACL.as(anonymous)) {
             mockAuthorizationStrategy.grant(Job.READ).onItems(project).to(anonymous);
-            assertThatCode(() -> uut.getSeverityDistributionTrend()).doesNotThrowAnyException();
+            assertThatCode(() -> uut.getTrendDistribution()).doesNotThrowAnyException();
         }
     }
 
@@ -92,10 +99,21 @@ class JobActionTest {
         sd1.add(Severity.MEDIUM);
         final SeverityDistribution sd2 = new SeverityDistribution(2);
         sd2.add(Severity.HIGH);
+        sd2.add(Severity.INFO);
+
+        final ViolationDistribution violationDistribution1 = new ViolationDistribution(1);
+        violationDistribution1.add(ViolationState.FAIL);
+        final ViolationDistribution violationDistribution2 = new ViolationDistribution(2);
+        violationDistribution2.add(ViolationState.INFO);
+
         final ResultAction ra1 = mock(ResultAction.class);
         final ResultAction ra2 = mock(ResultAction.class);
+
         when(ra1.getSeverityDistribution()).thenReturn(sd1);
         when(ra2.getSeverityDistribution()).thenReturn(sd2);
+        when(ra1.getViolationDistribution()).thenReturn(violationDistribution1);
+        when(ra2.getViolationDistribution()).thenReturn(violationDistribution2);
+
         final FreeStyleBuild b1 = new FreeStyleBuild(project);
         b1.addAction(ra1);
         final FreeStyleBuild b2 = new FreeStyleBuild(project);
@@ -104,7 +122,10 @@ class JobActionTest {
         project._getRuns().put(2, b2);
 
         final JobAction uut = new JobAction(project);
-        Assertions.<JSONArray>assertThat(uut.getSeverityDistributionTrend()).isEqualTo(JSONArray.fromObject(List.of(sd1, sd2)));
+        Assertions.<JSONArray>assertThat(uut.getTrendDistribution()).isEqualTo(JSONArray.fromObject(
+                Arrays.asList(
+                        TrendDistribution.of(1).addMedium(1).addFail(1),
+                        TrendDistribution.of(2).addHigh(1).addInfo(2))));
     }
 
 }
